fixed productpage overflow, Basket page is now linked

--- a/src/styles/ProductPage.scss
+++ b/src/styles/ProductPage.scss
@@ -1,3 +1,7 @@
+body {
+  overflow-x: hidden; /* Prevent horizontal scrolling globally */
+}
+
 .product-page-container {
   padding: 0 100px;
 }
